# libconfig-rs

./: .gitignore  Cargo.toml  ChangeLog.md  Makefile  README.md  build.rs  libconfig-rs.spec
.github/workflows/: release-workflow.yml  test.yml
debian/: changelog  control  copyright  rules
src/: config.rs  constants.rs  error.rs  ffi.rs  lib.rs  setting.rs  wrapper.c  wrapper.h
tests/: config_format.rs  config_lifecycle.rs  config_lookup.rs  config_options.rs  constants_test.rs  error_handling.rs  setting_children.rs  setting_elements.rs  setting_lookup.rs  setting_navigation.rs  setting_values.rs
tests/common/: mod.rs
